# cmproj-snippet

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cmproj.desktop  desktop.in  docker-compose.yaml  make-appimage.sh
doc/: CMakeLists.txt  Doxyfile.in
mainCmp/: CMakeLists.txt
mainCmp/src/: cmproj.cpp
objLibEx/: CMakeLists.txt
secCmp/: CMakeLists.txt
secCmp/inc/: Example.hpp
secCmp/src/: Example.cpp
secCmp/test/: CMakeLists.txt  test.cpp
